// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseCustomers component render TextComponent component with title and with create button 1`] = `
<div
  className="css-view-1dbjc4n r-paddingLeft-b5h31w r-paddingTop-m611by"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
  >
    <div
      className="css-text-901oao r-fontWeight-vw2c0b"
      dir="auto"
      onClick={[Function]}
      style={
        Object {
          "fontSize": "20px",
        }
      }
    >
      Test scene
    </div>
    <div
      className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-justifyContent-17s6mgv r-paddingRight-1v0fv4f r-width-l0gqae"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-paddingRight-1qfoi16 r-width-l0gwng"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-l7f4p8 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "WebkitTransitionDuration": "0s",
              "transitionDuration": "0s",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
            dir="auto"
            onClick={[Function]}
          >
            CREAR CLIENTE
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-paddingRight-1qfoi16 r-width-l0gwng"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-l7f4p8 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "WebkitTransitionDuration": "0s",
              "transitionDuration": "0s",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
            dir="auto"
            onClick={[Function]}
          >
            CERRAR SESION
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-paddingLeft-b5h31w r-paddingTop-m611by"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "height": "100px",
          "width": "100px",
        }
      }
    />
  </div>
</div>
`;

exports[`BaseCustomers component render TextComponent component with title and with list button 1`] = `
<div
  className="css-view-1dbjc4n r-paddingLeft-b5h31w r-paddingTop-m611by"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
  >
    <div
      className="css-text-901oao r-fontWeight-vw2c0b"
      dir="auto"
      onClick={[Function]}
      style={
        Object {
          "fontSize": "20px",
        }
      }
    >
      Test scene
    </div>
    <div
      className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-justifyContent-17s6mgv r-paddingRight-1v0fv4f r-width-l0gqae"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-paddingRight-1qfoi16 r-width-l0gwng"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-l7f4p8 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "WebkitTransitionDuration": "0s",
              "transitionDuration": "0s",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
            dir="auto"
            onClick={[Function]}
          >
            LISTA DE CLIENTES
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-paddingRight-1qfoi16 r-width-l0gwng"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-l7f4p8 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "WebkitTransitionDuration": "0s",
              "transitionDuration": "0s",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
            dir="auto"
            onClick={[Function]}
          >
            CERRAR SESION
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-paddingLeft-b5h31w r-paddingTop-m611by"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "height": "100px",
          "width": "100px",
        }
      }
    />
  </div>
</div>
`;

exports[`BaseCustomers component render TextComponent component with title and without buttons 1`] = `
<div
  className="css-view-1dbjc4n r-paddingLeft-b5h31w r-paddingTop-m611by"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
  >
    <div
      className="css-text-901oao r-fontWeight-vw2c0b"
      dir="auto"
      onClick={[Function]}
      style={
        Object {
          "fontSize": "20px",
        }
      }
    >
      Test scene
    </div>
    <div
      className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-justifyContent-17s6mgv r-paddingRight-1v0fv4f r-width-l0gqae"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-paddingRight-1qfoi16 r-width-l0gwng"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-l7f4p8 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "WebkitTransitionDuration": "0s",
              "transitionDuration": "0s",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
            dir="auto"
            onClick={[Function]}
          >
            CERRAR SESION
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-paddingLeft-b5h31w r-paddingTop-m611by"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "height": "100px",
          "width": "100px",
        }
      }
    />
  </div>
</div>
`;

exports[`BaseCustomers component render TextComponent component without title and buttons 1`] = `
<div
  className="css-view-1dbjc4n r-paddingLeft-b5h31w r-paddingTop-m611by"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
  >
    <div
      className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-justifyContent-17s6mgv r-paddingRight-1v0fv4f r-width-l0gqae"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-paddingRight-1qfoi16 r-width-l0gwng"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-l7f4p8 r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "WebkitTransitionDuration": "0s",
              "transitionDuration": "0s",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
            dir="auto"
            onClick={[Function]}
          >
            CERRAR SESION
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-paddingLeft-b5h31w r-paddingTop-m611by"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "height": "100px",
          "width": "100px",
        }
      }
    />
  </div>
</div>
`;
